replaced yaml file with json file reducing the dependencies
Signed-off-by: Marcel Verpaalen <marcel@verpaalen.com>